# tgbot_windows_remote_killswitch

./: README.md  pyproject.toml
src/: bsod.py  config.py  main.py
