[tool.poetry]
name = "tgbot-windows-remote-killswitch"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "tgbot_windows_remote_killswitch"}]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
